# DataCleaning.py

./: README.md  pyproject.toml  run_ingestion.py  show_cleaning_demo.py
output/: chunks.csv  chunks.json
sample_input/: Budget_Rules.txt  Policy_Update.txt  dirty_sample.txt
src/smart_doc_ingestion/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
